Error on Dark Mode Solve

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -427,7 +427,7 @@ b, strong {
 			border-bottom: 1px solid #1f1f1f;
 	    }
 	}
-	.small-text {
+	.small-text, .navbar .container {
 		background: #0d0c15;
 		color: $text-white;
 	}
